<resources>
    <string name="app_name">Waycool</string>
    <string name="title_activity_home_screen">HomeScreen</string>
    <string name="title_home">Home</string>
    <string name="title_categories">Categories</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_cart">Cart</string>
    <string name="type">Type</string>
    <string name="storage_life">Storage Life</string>
    <string name="qty">QTY.</string>
    <string name="add">ADD</string>
    <string name="pager_margin">-880</string>
    <string name="search_address">Search your locality</string>
    <string name="home_search_hint">What are you looking for? (e.g mangoes, apples)</string>
    <string name="categories_search_hint">Search</string>
    <string name="X">X</string>
    <string name="ok">OK</string>
    <string name="grant_permission">Please switch on your GPS so that we can serve you better!</string>
    <string name="no_internet">Please switch on your Internet so that we can serve you better!</string>
    <string name="no_address">Couldn\'t get address</string>
    <string name="cur_add">Your address:\n</string>
    <string name="done">Done</string>
    <string name="total_items">6 items</string>
    <string name="total_amount">Rs. 321</string>
    <string name="cat_label">Select Category</string>
    <string name="out_of_stock">OUT OF STOCK</string>
    <string name="no_stock">NO STOCK</string>
    <string name="today">Today,</string>
    <string name="amount_spent">Rs. 3257</string>
    <string name="month1">Jun</string>
    <string name="month2">Jul</string>
    <string name="month3">Aug</string>
    <string name="month4">Sept</string>
    <string name="expenditure">Expenditure Ratio</string>
    <string name="growth">Growth</string>
    <string name="expenditure_descp">Rs. 800 \n Cash Out - Transfer</string>
    <string name="growth_descp">+42.6% \n Wallet</string>
    <string name="no_gps">GPS service is turned off</string>
    <string name="address_err">GPS or Internet service is off</string>
    <string name="no_gps_or_net">Please make sure your GPS and Internet services are on so that we can serve you better</string>
    <string name="pls_grant_permission">Please grant us permission to use GPS so that we can serve you better</string>
</resources>
