<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="8dp">

    <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp">

        <LinearLayout
                android:id="@+id/mainLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="1">

            <LinearLayout
                    android:id="@+id/firstSideLinearLayout"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_margin="5dp"
                    android:layout_weight="0.4">
                <LinearLayout
                        android:id="@+id/textLinearLayout"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:orientation="horizontal"
                        android:weightSum="1">
                    <TextView
                            android:textAlignment="center"
                            android:textColor="@color/colorWhite"
                            android:background="@color/discountColor"
                            android:layout_marginEnd="5dp"
                            android:id="@+id/discountText"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="0.4"/>
                    <TextView
                            android:textAlignment="center"
                            android:background="@color/availabilityColor"
                            android:textColor="@color/colorBlack"
                            android:id="@+id/availabilityText"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="0.6"/>
                </LinearLayout>
                <FrameLayout
                        android:id="@+id/pending_notification"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="end|bottom"
                        android:clipToPadding="false">

                    <ImageView
                            android:id="@+id/itemImage"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_gravity="center"
                            android:layout_margin="8dp"/>

                    <TextView
                            android:id="@+id/stockText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:visibility="gone"
                            android:layout_margin="5dp"
                            android:gravity="center"
                            android:background="@color/colorWhite"
                            android:textAlignment="center"
                            android:textColor="@color/colorBlack"/>

                </FrameLayout>
            </LinearLayout>
            <LinearLayout
                    android:id="@+id/secondSideLinearLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_margin="5dp"
                    android:layout_weight="0.6">

                <TextView
                        android:textAlignment="center"
                        android:textColor="@color/colorBlack"
                        android:id="@+id/titleText"
                        android:layout_width="match_parent"
                        android:layout_height="25dp"/>
                <LinearLayout
                        android:layout_marginTop="16dp"
                        android:id="@+id/descriptionLinearLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="1">
                    <LinearLayout
                            android:id="@+id/typeLinearLayout"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_weight="0.33">
                        <TextView
                                android:text="@string/type"
                                android:id="@+id/typeText"
                                android:layout_width="match_parent"
                                android:layout_height="20dp"/>
                        <TextView
                                android:id="@+id/typeDescription"
                                android:layout_width="match_parent"
                                android:layout_height="20dp"/>

                    </LinearLayout>
                    <LinearLayout
                            android:id="@+id/storageLinearLayout"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_weight="0.33">
                        <TextView
                                android:text="@string/storage_life"
                                android:id="@+id/storageText"
                                android:layout_width="match_parent"
                                android:layout_height="20dp"/>
                        <TextView
                                android:textAlignment="center"
                                android:id="@+id/storageDescription"
                                android:layout_width="match_parent"
                                android:layout_height="20dp"/>

                    </LinearLayout>
                    <LinearLayout
                            android:id="@+id/quantityLinearLayout"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_weight="0.33">
                        <TextView
                                android:text="@string/qty"
                                android:id="@+id/quantityText"
                                android:layout_width="wrap_content"
                                android:layout_height="20dp"/>
                        <TextView
                                android:id="@+id/quantityDescription"
                                android:layout_width="wrap_content"
                                android:layout_height="20dp"/>
                    </LinearLayout>

                </LinearLayout>
                <LinearLayout
                        android:id="@+id/priceLinearLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="16dp"
                        android:weightSum="1">
                    <LinearLayout
                            android:id="@+id/discountLinearLayout"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_weight="0.5">
                        <TextView
                                android:id="@+id/actualPrice"
                                android:layout_width="wrap_content"
                                android:layout_height="20dp"/>
                        <TextView
                                android:textColor="@color/colorPrimary"
                                android:id="@+id/discountPrice"
                                android:layout_width="wrap_content"
                                android:layout_height="20dp"/>
                    </LinearLayout>
                    <LinearLayout
                            android:id="@+id/addButton"
                            android:layout_width="wrap_content"
                            android:layout_height="30dp"
                            android:orientation="horizontal"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="5dp"
                            android:layout_gravity="center_vertical"
                            android:background="@drawable/rounded_corners"
                            android:layout_weight="0.5">
                        <android.support.v7.widget.CardView
                                android:id="@+id/minusCard"
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:layout_margin="2dp"
                                app:cardCornerRadius="15dp"
                                android:visibility="gone">
                            <ImageView
                                    app:srcCompat="@drawable/ic_remove_black_24dp"
                                    android:layout_gravity="center"
                                    android:id="@+id/minusImage"
                                    android:layout_width="30dp"
                                    android:layout_height="30dp"
                                    android:tint="@color/colorPrimary"
                                    android:layout_weight="0.2"/>
                        </android.support.v7.widget.CardView>
                        <TextView
                                android:layout_gravity="center_vertical"
                                android:text="@string/add"
                                android:layout_weight="0.6"
                                android:textAlignment="center"
                                android:textColor="@color/colorWhite"
                                android:id="@+id/addText"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>
                        <android.support.v7.widget.CardView
                                android:id="@+id/addCard"
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:layout_margin="3dp"
                                app:cardCornerRadius="15dp">
                            <ImageView
                                    app:srcCompat="@drawable/ic_add_black_24dp"
                                    android:layout_weight="0.2"
                                    android:layout_gravity="center"
                                    android:tint="@color/colorPrimary"
                                    android:id="@+id/addImage"
                                    android:layout_width="30dp"
                                    android:layout_height="30dp"/>
                        </android.support.v7.widget.CardView>
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>